# ad-tornado

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.deps.mk  README.md  build.sh  build_cef.sh  build_of.sh  clean.sh  deps.sh  run.sh
assets/: index.html
assets/html/: index.html
data/html/: index.html
include/: CefApp.h  MainApp.h  SimpleHandler.h
include/common/: AppCore.h
include/video/: VideoPlayer.h
include/web/: CefBrowserApp.h  CefBrowserHandler.h  VideoControlHandler.h
scripts/: copy_cef_files.sh  download_test_video.sh
src/: CefApp.cpp  MainApp.cpp  MainApp.h  SimpleHandler.cpp  SimpleHandler.h  main.cpp
src/common/: AppCore.cpp
src/video/: VideoPlayer.cpp
src/web/: CefBrowserApp.cpp  CefBrowserHandler.cpp  VideoControlHandler.cpp
